Update contact email and jurisdiction

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -76,7 +76,7 @@
                 <ul>
                     <li><strong>In-App:</strong> Settings → Account → Delete Account</li>
                     <li><strong>Email Request:</strong> Contact <a
-                            href="mailto:support@moneybook.app">support@moneybook.app</a></li>
+                            href="mailto:1muhammedshibili@gmail.com">1muhammedshibili@gmail.com</a></li>
                 </ul>
                 <p>Upon account deletion:</p>
                 <ul>
@@ -270,14 +270,15 @@
                 <h2>12. Governing Law and Dispute Resolution</h2>
 
                 <h3>12.1 Governing Law</h3>
-                <p>These Terms shall be governed by and construed in accordance with the laws of [Your Jurisdiction],
+                <p>These Terms shall be governed by and construed in accordance with the laws of India,
                     without regard to its conflict of law principles.</p>
 
                 <h3>12.2 Dispute Resolution</h3>
                 <p>In the event of any dispute arising from these Terms or your use of the App:</p>
                 <ol>
                     <li><strong>Informal Resolution:</strong> Contact us at <a
-                            href="mailto:support@moneybook.app">support@moneybook.app</a> to attempt to resolve the
+                            href="mailto:1muhammedshibili@gmail.com">1muhammedshibili@gmail.com</a> to attempt to
+                        resolve the
                         dispute informally</li>
                     <li><strong>Mediation:</strong> If informal resolution fails, disputes may be submitted to mediation
                     </li>
@@ -307,7 +308,8 @@
                 <p>If you have any questions, concerns, or feedback regarding these Terms of Service, please contact us:
                 </p>
                 <div class="contact-info">
-                    <p><strong>Email:</strong> <a href="mailto:support@moneybook.app">support@moneybook.app</a></p>
+                    <p><strong>Email:</strong> <a
+                            href="mailto:1muhammedshibili@gmail.com">1muhammedshibili@gmail.com</a></p>
                     <p><strong>Response Time:</strong> We aim to respond to all inquiries within 48 hours</p>
                 </div>
                 <p>For account deletion requests, please reference "Account Deletion" in your email subject line.</p>
