Update support email to 1moneybookapp@gmail.com

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -170,7 +170,7 @@
                 <ul>
                     <li><strong>Via App:</strong> Go to Settings → Account → Delete Account</li>
                     <li><strong>Via Email:</strong> Contact us at <a
-                            href="mailto:1muhammedshibili@gmail.com">1muhammedshibili@gmail.com</a></li>
+                            href="mailto:1moneybookapp@gmail.com">1moneybookapp@gmail.com</a></li>
                 </ul>
                 <p>Upon receiving a deletion request, we will:</p>
                 <ol>
@@ -197,7 +197,7 @@
                     <li><strong>Object to Processing:</strong> Right to object to certain types of data processing</li>
                 </ul>
                 <p>To exercise these rights, please contact us at <a
-                        href="mailto:1muhammedshibili@gmail.com">1muhammedshibili@gmail.com</a></p>
+                        href="mailto:1moneybookapp@gmail.com">1moneybookapp@gmail.com</a></p>
             </section>
 
             <section>
@@ -229,7 +229,7 @@
                     <li>Right to non-discrimination for exercising your CCPA rights</li>
                 </ul>
                 <p>To exercise these rights, contact us at <a
-                        href="mailto:1muhammedshibili@gmail.com">1muhammedshibili@gmail.com</a></p>
+                        href="mailto:1moneybookapp@gmail.com">1moneybookapp@gmail.com</a></p>
             </section>
 
             <section>
