--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -76,7 +76,7 @@
                 <ul>
                     <li><strong>In-App:</strong> Settings → Account → Delete Account</li>
                     <li><strong>Email Request:</strong> Contact <a
-                            href="mailto:1muhammedshibili@gmail.com">1muhammedshibili@gmail.com</a></li>
+                            href="mailto:1moneybookapp@gmail.com">1moneybookapp@gmail.com</a></li>
                 </ul>
                 <p>Upon account deletion:</p>
                 <ul>
@@ -277,7 +277,7 @@
                 <p>In the event of any dispute arising from these Terms or your use of the App:</p>
                 <ol>
                     <li><strong>Informal Resolution:</strong> Contact us at <a
-                            href="mailto:1muhammedshibili@gmail.com">1muhammedshibili@gmail.com</a> to attempt to
+                            href="mailto:1moneybookapp@gmail.com">1moneybookapp@gmail.com</a> to attempt to
                         resolve the
                         dispute informally</li>
                     <li><strong>Mediation:</strong> If informal resolution fails, disputes may be submitted to mediation
@@ -308,8 +308,7 @@
                 <p>If you have any questions, concerns, or feedback regarding these Terms of Service, please contact us:
                 </p>
                 <div class="contact-info">
-                    <p><strong>Email:</strong> <a
-                            href="mailto:1muhammedshibili@gmail.com">1muhammedshibili@gmail.com</a></p>
+                    <p><strong>Email:</strong> <a href="mailto:1moneybookapp@gmail.com">1moneybookapp@gmail.com</a></p>
                     <p><strong>Response Time:</strong> We aim to respond to all inquiries within 48 hours</p>
                 </div>
                 <p>For account deletion requests, please reference "Account Deletion" in your email subject line.</p>
