--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
                 <h2>Questions or Concerns?</h2>
                 <p>If you have any questions about our privacy practices or terms, we're here to help.</p>
                 <div class="contact-info">
-                    <p><strong>Email:</strong> <a
-                            href="mailto:1muhammedshibili@gmail.com">1muhammedshibili@gmail.com</a></p>
+                    <p><strong>Email:</strong> <a href="mailto:1moneybookapp@gmail.com">1moneybookapp@gmail.com</a></p>
                     <p><strong>Response Time:</strong> We typically respond within 48 hours</p>
                 </div>
             </section>
