--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -252,7 +252,7 @@
                     <li>Legitimate interests (improving our services)</li>
                 </ul>
                 <p>To exercise your rights or file a complaint with a supervisory authority, contact us at <a
-                        href="mailto:1muhammedshibili@gmail.com">1muhammedshibili@gmail.com</a></p>
+                        href="mailto:1moneybookapp@gmail.com">1moneybookapp@gmail.com</a></p>
             </section>
 
             <section>
@@ -272,8 +272,7 @@
                 <p>If you have any questions, concerns, or requests regarding this Privacy Policy or our data practices,
                     please contact us:</p>
                 <div class="contact-info">
-                    <p><strong>Email:</strong> <a
-                            href="mailto:1muhammedshibili@gmail.com">1muhammedshibili@gmail.com</a></p>
+                    <p><strong>Email:</strong> <a href="mailto:1moneybookapp@gmail.com">1moneybookapp@gmail.com</a></p>
                     <p><strong>Response Time:</strong> We aim to respond to all inquiries within 48 hours</p>
                 </div>
                 <p>For data protection inquiries specifically related to GDPR or CCPA compliance, please reference the
