--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                 <a href="index.html" class="active">Home</a>
                 <a href="privacy-policy.html">Privacy Policy</a>
                 <a href="terms-of-service.html">Terms of Service</a>
+                <a href="delete_account.html">Account Deletion</a>
+                <a href="delete_data.html">Data Deletion</a>
             </nav>
         </header>
 
@@ -48,6 +50,31 @@
                         <li>Liability limitations</li>
                     </ul>
                     <a href="terms-of-service.html" class="btn">Read Terms of Service</a>
+                </div>
+
+                <div class="card">
+                    <h2>🗑️ Account Deletion</h2>
+                    <p>Follow these steps to permanently delete your account and all your data from our servers.</p>
+                    <ul class="highlights">
+                        <li>In-app deletion guide</li>
+                        <li>Email request steps</li>
+                        <li>Data retention info</li>
+                        <li>G-Account safety</li>
+                    </ul>
+                    <a href="delete_account.html" class="btn">View Deletion Guide</a>
+                </div>
+
+                <div class="card">
+                    <h2>🛠️ Data Management</h2>
+                    <p>Learn how to delete specific transactions, categories, or debts without removing your account.
+                    </p>
+                    <ul class="highlights">
+                        <li>Selective data removal</li>
+                        <li>In-app management</li>
+                        <li>Immediate server wipe</li>
+                        <li>Request selective deletion</li>
+                    </ul>
+                    <a href="delete_data.html" class="btn">Manage Your Data</a>
                 </div>
             </div>
 
