--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -16,6 +16,8 @@
                 <a href="index.html">Home</a>
                 <a href="privacy-policy.html" class="active">Privacy Policy</a>
                 <a href="terms-of-service.html">Terms of Service</a>
+                <a href="delete_account.html">Account Deletion</a>
+                <a href="delete_data.html">Data Deletion</a>
             </nav>
         </header>
 
@@ -171,6 +173,8 @@
                     <li><strong>Via App:</strong> Go to Settings → Account → Delete Account</li>
                     <li><strong>Via Email:</strong> Contact us at <a
                             href="mailto:1moneybookapp@gmail.com">1moneybookapp@gmail.com</a></li>
+                    <li><strong>Guides:</strong> View our <a href="delete_account.html">Account Deletion Guide</a> or <a
+                            href="delete_data.html">Data Management Guide</a> for step-by-step instructions.</li>
                 </ul>
                 <p>Upon receiving a deletion request, we will:</p>
                 <ol>
