--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -16,6 +16,8 @@
                 <a href="index.html">Home</a>
                 <a href="privacy-policy.html">Privacy Policy</a>
                 <a href="terms-of-service.html" class="active">Terms of Service</a>
+                <a href="delete_account.html">Account Deletion</a>
+                <a href="delete_data.html">Data Deletion</a>
             </nav>
         </header>
 
